--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,44 +1,30 @@
 {
-  // ────────────────────────────────
-  // Dev Container configuration
-  // ────────────────────────────────
   "name": "android-codespace",
 
-  // Build the image from the Dockerfile in this folder
+  // Build with the Dockerfile in this repo
   "build": { "dockerfile": "Dockerfile" },
 
-  // ── Features to install inside the image ───────────────────────────────────────
   "features": {
-    // Java 17 via SDK-man (installs JDK + basic toolchain helpers)
-    "ghcr.io/devcontainers/features/java:1": {
-      "version": "17"
-    },
+    // Java 17 via SDKMAN! (installs Gradle when we ask for it)
+    "ghcr.io/devcontainers/features/java:1":  { "version": "17", "installGradle": true },
 
-    // Android SDK & platform-tools (API 34 / Build-Tools 34.0.0)
-    "ghcr.io/casl0/devcontainer-features/android-sdk:1": {
-      "version": "34.0.0"
-    },
-
-    // Stand-alone Gradle CLI (handy for non-Android builds or quick checks)
+    // Latest Gradle CLI (makes gradle wrapper optional)
     "ghcr.io/devcontainers/features/gradle:1": {},
 
-    // Flutter tool-chain (Dart SDK, `flutter` CLI, etc.)
+    // Android SDK / Platform-tools / Build-tools 34.0.0
+    "ghcr.io/casl0/devcontainer-features/android-sdk:1": { "version": "34.0.0" },
+
+    // Flutter SDK (hsun1031 keeps it up to date for dev-containers)
     "ghcr.io/hsun1031/devcontainer_flutter:latest": {}
   },
 
-  // ── Environment tweaks ─────────────────────────────────────────────────────────
+  // Add Flutter’s bin dir to every future shell
   "containerEnv": {
-    // Where Flutter was installed by the Feature
-    "FLUTTER_HOME": "/workspaces/frame_realtime_gemini_voicevision/.devcontainer/flutter",
-
-    // Append Flutter’s bin directory to the *existing* PATH inside the container
-    // ${containerEnv:PATH} → resolves to the PATH that features + base image set up
-    "PATH": "${containerEnv:PATH}:${containerEnv:FLUTTER_HOME}/bin"
+    "PATH": "${containerEnv:PATH}:/workspaces/${localWorkspaceFolderBasename}/.devcontainer/flutter/bin"
   },
 
-  // ── First-run provisioning commands ────────────────────────────────────────────
   "postCreateCommand": [
-    // Make sure the helper script is executable, then run it to accept SDK licences
+    // Make sure our licence helper is executable, then run it
     "chmod +x .devcontainer/scripts/accept-android-licenses.sh",
     ".devcontainer/scripts/accept-android-licenses.sh",
 
@@ -46,11 +32,14 @@
     "java -version",
     "gradle --version",
 
-    // If an Android-project wrapper exists, use it to verify Gradle config
-    "[ -f android/gradlew ] && chmod +x android/gradlew && android/gradlew --version || true"
+    // If this repo has an Android-specific gradle wrapper, show its version too
+    "[ -f android/gradlew ] && chmod +x android/gradlew && android/gradlew --version || true",
+
+    // Throw away SDKMAN / apt caches to keep the image smaller
+    "sdk flush archives > /dev/null || true",
+    "sudo apt-get clean"
   ],
 
-  // ── VS Code extensions that should be pre-installed ───────────────────────────
   "customizations": {
     "vscode": {
       "extensions": [
@@ -62,10 +51,8 @@
     }
   },
 
-  // ── Ports to expose from the container back to the Codespace UI ────────────────
-  "forwardPorts": [5555, 8080],
+  // Typical ports: adb → 5555, dev-server / emulator bridge → 8080
+  "forwardPorts": [5555, 8080]
 
-  // Default non-root user in GitHub-provided Codespaces images
-  "remoteUser": "codespace"
+  // ⬅️  **NO remoteUser key**: the default 'vscode' account will be used
 }
-
