--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,29 +1,26 @@
 {
-  "name": "android-flutter-codespace",
-
-  // ✅ Flutter 3.x, Dart SDK, Java 17, Android SDK & ADB already installed.
-  //    See: https://github.com/cirruslabs/docker-images/tree/master/flutter
-  "image": "ghcr.io/cirruslabs/flutter:3.22.1",  // pin the tag you prefer
+  "name": "android-codespace",
+  "image": "mcr.microsoft.com/devcontainers/base:ubuntu-22.04",
 
   "features": {
-    // CLI niceties, git, zsh, curl, etc.
-    "ghcr.io/devcontainers/features/common-utils:2": {},
+    // Java 17 like the workflow's `actions/setup-java@v4`
+    "ghcr.io/devcontainers/features/java:1": { "version": "17" },
 
-    // Use the full Android SDK for API-34 (the Cirrus image ships 34 by default,
-    // but including the Feature keeps `sdkmanager` available for future updates)
-    "ghcr.io/casl0/devcontainer-features/android-sdk:1": {
-      "version": "34.0.0"
-    }
+    // Tiny helpers (curl, git, zsh, etc.)
+    "ghcr.io/devcontainers/features/common-utils:2": {}
   },
 
-  // Run once the container is up
+  // Everything else (Flutter + writable Android SDK) is installed by the
+  // scripts that run *inside* the container, as the non-root `codespace` user.
   "postCreateCommand": [
-    // Accept Android licences non-interactively
-    "yes | sdkmanager --licenses",
-
-    // Make sure Flutter itself is sane
-    "flutter doctor -v"
+    "bash .devcontainer/scripts/install_flutter.sh    3.24.0",
+    "bash .devcontainer/scripts/install_user_sdk.sh   33.0.1 33 31 29 26.3.11579264"
   ],
+
+  "containerEnv": {
+    // Add Flutter & SDK to every shell PATH once the scripts have run
+    "PATH": "${containerEnv:PATH}:$HOME/flutter/bin:$HOME/android-sdk/platform-tools"
+  },
 
   "customizations": {
     "vscode": {
@@ -36,9 +33,6 @@
     }
   },
 
-  // Forward the most common dev ports
   "forwardPorts": [5555, 8080],
-
-  // Default user inside the container
   "remoteUser": "codespace"
 }
