--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,52 +1,78 @@
-name: frame_realtime_gemini_voicevision
-description: "Connects to Frame, streams audio from the Frame microphone and photos from its camera in a websockets conversation with the Gemini Realtime API"
+name: cognitive_assistant
+description: "A Flutter-based cognitive augmentation assistant for Brilliant Labs Frame."
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.5.0 <4.0.0"
+  flutter: ">=3.22.0"
 
+#################################
+# Runtime dependencies
+################################
 dependencies:
   flutter:
     sdk: flutter
-  flutter_blue_plus: ^1.32.12
-  logging: ^1.2.0
-  simple_frame_app: ^7.0.0
-  frame_msg: ^2.0.0
-  shared_preferences: ^2.3.2
-  share_plus: ^10.1.0
+
+  # Brilliant-Frame stack
+  simple_frame_app: ^7.1.0
+  frame_msg:        ^2.0.0
+
+  # Bluetooth LE
+  flutter_blue_plus: ^1.35.3
+
+  # On-device ML -> TO BE ADDED IN A LATER STEP
+  # tflite_flutter:            ^0.10.4
+  # tflite_flutter_processing: ^0.4.1
+  # google_mlkit_text_recognition: ^0.11.0
+  # image: ^4.5.2
+
+  # Local database
+  objectbox:              ^4.2.0
+  objectbox_flutter_libs: ^4.2.0
+
+  # Platform utilities
+  shared_preferences:      ^2.3.2
+  share_plus:              ^10.1.0
   flutter_foreground_task: ^6.5.0
-  flutter_pcm_sound: ^3.1.1
-  web_socket_channel: ^3.0.1
+  flutter_pcm_sound:       ^3.1.1
+  web_socket_channel:      ^3.0.1
+  path_provider:           ^2.1.4
+  path:                    1.9.0
+  uuid:                    ^4.5.1
+  rxdart:                  ^0.28.0
+  logging:                 ^1.3.0
 
-  # ObjectBox dependencies
-  objectbox: ^4.0.0
-  objectbox_flutter_libs: any
-
-  # Path packages
-  path_provider: ^2.1.3
-  path: ^1.9.0
-
-  # NEW: Added for Phase 1
-  google_mlkit_text_recognition: ^0.11.0
-  image: ^4.2.0
-
-
+#################################
+# Dev-only dependencies
+################################
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints:   ^3.0.2
+  build_runner:    ^2.4.13
+  objectbox_generator: ^4.2.0
 
-  # ObjectBox generator dependencies
-  build_runner: ^2.4.0
-  objectbox_generator: ^4.0.0
+#################################
+# Dependency overrides
+#################################
+dependency_overrides:
+  path: 1.9.0
 
+#################################
+# Flutter assets
+################################
 flutter:
   uses-material-design: true
   assets:
+    # Original Lua assets
     - packages/frame_msg/lua/battery.min.lua
     - packages/frame_msg/lua/data.min.lua
     - packages/frame_msg/lua/camera.min.lua
     - packages/frame_msg/lua/code.min.lua
     - packages/frame_msg/lua/plain_text.min.lua
     - assets/frame_app.min.lua
+    
+    # AI Model assets -> TO BE ADDED IN A LATER STEP
+    # - assets/models/mobilebert_embedding.tflite
+    # - assets/models/vocab.txt
